force-app/main/default/objects/APTS_Option__c/APTS_Option__c.object-meta.xml
<CustomObject>
    <label>Option</label>
    <nameField>
        <displayFormat>O-{0000000000}</displayFormat>
        <label>Option Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Options</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>