force-app/main/default/objects/APTS_Option__c/fields/APTS_Bundle__c.field-meta.xml
<CustomField>
    <fullName>APTS_Bundle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bundle</label>
    <referenceTo>APTS_Bundle__c</referenceTo>
    <relationshipLabel>Options</relationshipLabel>
    <relationshipName>Options</relationshipName>
    <type>Lookup</type>
</CustomField>