force-app/main/default/objects/APTS_Option__c/fields/APTS_Option_Line_Number__c.field-meta.xml
<CustomField>
    <fullName>APTS_Option_Line_Number__c</fullName>
    <formula>Text(APTS_Bundle__r.SequenceLine__c) + If((Proposal_Line_Item__r.Apttus_QPConfig__ItemSequence__c-1)&gt;9,&apos;.0&apos;,&apos;.00&apos;)+ Text( Proposal_Line_Item__r.Apttus_QPConfig__ItemSequence__c -1 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Option Line Number</label>
    <type>Text</type>
</CustomField>