force-app/main/default/objects/APTS_Option__c/fields/Extended_Net_Price_template__c.field-meta.xml
<CustomField>
    <fullName>Extended_Net_Price_template__c</fullName>
    <label>Extended Net Price template</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>