force-app/main/default/objects/APTS_Option__c/fields/NetPrice__c.field-meta.xml
<CustomField>
    <fullName>NetPrice__c</fullName>
    <label>Net Price</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>