force-app/main/default/objects/APTS_Option__c/fields/Option_Adjustment_Percent__c.field-meta.xml
<CustomField>
    <fullName>Option_Adjustment_Percent__c</fullName>
    <label>Option Adjustment Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>