force-app/main/default/objects/APTS_Option__c/fields/Option_Code__c.field-meta.xml
<CustomField>
    <fullName>Option_Code__c</fullName>
    <formula>Proposal_Line_Item__r.APTPS_Product_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Option Code</label>
    <type>Text</type>
</CustomField>