force-app/main/default/objects/APTS_Option__c/fields/Option_Price__c.field-meta.xml
<CustomField>
    <fullName>Option_Price__c</fullName>
    <label>Option Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>