force-app/main/default/objects/APTS_Option__c/fields/Option_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Option_Quantity__c</fullName>
    <label>Option Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>