force-app/main/default/objects/APTS_Option__c/fields/Proposal__c.field-meta.xml
<CustomField>
    <fullName>Proposal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote/Proposal</label>
    <referenceTo>Apttus_Proposal__Proposal__c</referenceTo>
    <relationshipLabel>Options</relationshipLabel>
    <relationshipName>Bundle_Options</relationshipName>
    <type>Lookup</type>
</CustomField>