force-app/main/default/objects/APTS_Option__c/fields/Proposal_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Proposal Line Item</label>
    <referenceTo>Apttus_Proposal__Proposal_Line_Item__c</referenceTo>
    <relationshipLabel>Proposal Line Options</relationshipLabel>
    <relationshipName>ProposalLineOptions</relationshipName>
    <type>Lookup</type>
</CustomField>