force-app/main/default/objects/APTS_Option__c/fields/SequenceOption__c.field-meta.xml
<CustomField>
    <fullName>SequenceOption__c</fullName>
    <label>SequenceOption</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>