force-app/main/default/objects/APTS_Option__c/fields/sys_Product_Description__c.field-meta.xml
<CustomField>
    <fullName>sys_Product_Description__c</fullName>
    <formula>Proposal_Line_Item__r.APTS_Product_Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Description</label>
    <type>Text</type>
</CustomField>