force-app/main/default/objects/APTS_Option__c/fields/Template_Option_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Template_Option_Quantity__c</fullName>
    <formula>TEXT(Proposal_Line_Item__r.APTPS_Quantity__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Template Option Quantity</label>
    <type>Text</type>
</CustomField>