force-app/main/default/objects/APTS_Option__c/fields/Unit_Net_Price_Template2__c.field-meta.xml
<CustomField>
    <fullName>Unit_Net_Price_Template2__c</fullName>
    <label>Unit Net Price Template2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>